--- a/src/components/topcontainer/TopContainer.css
+++ b/src/components/topcontainer/TopContainer.css
@@ -56,3 +56,11 @@
 .top-container > div div .acount-balance {
     color: #16A44C;
 }
+
+.positive {
+    color: #16A44C;
+}
+
+.negative {
+    color: #DD302D;
+}
